--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -53,6 +53,7 @@ input::placeholder, textarea::placeholder {
     max-width: 1000px;
     margin-top: 0;
     padding: 12px;
+    margin-bottom: 36px;
 }
 .note-app__body h2 {
     font-weight: normal;
@@ -163,12 +164,21 @@ input::placeholder, textarea::placeholder {
     color: var(--bg-color-1);
     background-color: var(--delete-color);
 }
+footer {
+    padding: 16px 0;
+    font-size: 16px;
+    background: var(--bg-color-2);
+    color: var(--main-color-1);
+}
+footer p {
+    text-align: center;
+}
 @media only screen and (min-width: 420px) {
     .note-app__header h1 {
         font-size: 32px;
     }
     .note-app__body {
-        margin: 16px auto;
+        margin: 16px auto 36px;
     }
 }
 @media only screen and (min-width: 500px) {
